crates/jarl/tests/integration/snapshots/integration__toml__include_rmd_qmd_glob.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> analysis.qmd:6:1
  |
6 | any(is.na(y))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

warning: any_is_na
 --> report.Rmd:6:1
  |
6 | any(is.na(x))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

Found 2 errors.

----- stderr -----

----- args -----
check .
