crates/jarl/tests/integration/snapshots/integration__toml__include_wrong_values.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Failed to parse [TEMP_DIR]/jarl.toml:
TOML parse error at line 3, column 11
  |
3 | include = true
  |           ^^^^
invalid type: boolean `true`, expected a sequence


----- args -----
check .
