crates/jarl/tests/integration/snapshots/integration__toml__invalid_toml_fixable_rule.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---

success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Unknown rules in field `fixable` in 'jarl.toml': invalid_rule_name

----- args -----
check .
